--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,6 @@
     box-sizing: border-box;
 }
 .header{
-    
     background-color: white;
     position: fixed;
     top: 0;
@@ -76,10 +75,10 @@ a:hover, a:active{
 #middle-box1{
     background-color: white;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    margin-left:50px;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-direction: row;
+    margin-left:25px;
     margin-top: 50px;
     padding-top: px;
     height: 300px;
@@ -87,8 +86,8 @@ a:hover, a:active{
     border-radius: 15px;
     margin-top: 20px;
     position: absolute;
-    top: 50%;
-    left: 50%;
+    top: 27%;
+    left: 47%;
     transform: translate(-50%, -50%);
 }
 .left-but{
@@ -101,6 +100,7 @@ a:hover, a:active{
     border-radius: 50%;
     border: none;
     height: 20px;
+
 }
 #inside-boxleft{
     display: flex;
@@ -114,3 +114,60 @@ a:hover, a:active{
     width: 75px;
     
 }
+#lower-text{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 230px;
+    font-size:large;
+    color: grey;
+    font-size : 12px;
+}
+#left-text{
+    font-size:15px;
+}
+#right-box1{
+    width: 300px;
+    height: 400px;
+    border-radius:15px;
+    background-color:white;
+    background-color: white;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-direction: row;
+    padding-top: px;
+    margin-top: 20px;
+    position: absolute;
+    top: 33%;
+    left: 80%;
+    transform: translate(-50%, -50%);
+}
+.middle-box{
+    margin-left: 20px;
+    margin-top: 50px;
+    padding-top: 0;
+    height: 300px;
+    width: 600px;
+    border-radius: 15px;
+    margin-top: 20px;
+}  
+.mid{
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    margin-top: 20px;
+    margin-left: 100px;
+}
+.squid{
+    height: 200px;
+    width: 300px;
+    border-radius:15px;
+}
+.text{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+   
+
